@@ -8,6 +8,7 @@ import com.casper.sdk.service.serialization.cltypes.TypesFactory;
 import com.casper.sdk.service.serialization.util.ByteUtils;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static com.casper.sdk.service.serialization.util.ByteUtils.concat;
@@ -114,7 +115,7 @@ class DeployNamedArgByteSerializerTest {
     @Test
     void namedArgsToBytes() {
 
-        final List<DeployNamedArg> args = List.of(
+        final List<DeployNamedArg> args = Arrays.asList(
                 new DeployNamedArg("amount",
                         new CLValue(
                                 ByteUtils.decodeHex("05005550b405"),
